# BirsorturIA

./: .firebaserc  .replit  Dockerfile  README.md  app.py  chat_interface_mobile_fixed.html  chat_interface_modified.html  config.py  main.py  pyproject.toml  replit.md  requirements.txt
.idx/: integrations.json
attached_assets/: chat_interface_1754620080709.html
public/: index.html
routes/: chat.py  upload.py
services/: file_processor.py  groq_client.py
static/: script.js  style.css
templates/: index.html
utils/: validators.py
